contextkit (0.1.9~unreleased) unstable; urgency=low

  * 

 -- Gergely Risko <risko@debian.org>  Thu, 28 May 2009 14:24:14 +0300

contextkit (0.1.8) unstable; urgency=low

  * Added python-contextkit, which is a python binding for
    libcontextprovider and (in the future) libcontextsubscriber.
  * Added contextkit-utils, which only contains context-provide for now,
    it is a debug/test provider

    Implemented: SWP#CntFr-216

 -- Gergely Risko <ext-gergely.2.risko@nokia.com>  Thu, 28 May 2009 11:25:27 +0300

contextkit (0.1.7) unstable; urgency=low

  * Added the "fake provider", which just declares a lot of core
    properties but doesn't implement any of them, relying on the Context
    Commander to give them values.

    This provider is useful to give a pre-view to properties that are
    planned, and hopefully to gather early feedback about them.

    Implemented: SWP#CntFr-171.

 -- Marius Vollmer <marius.vollmer@nokia.com>  Mon, 25 May 2009 18:44:23 +0300

contextkit (0.1.6-2) unstable; urgency=low

  New upstream release.

  * contextd provides hal-based battery properties.
  * Couple of bug fixes related to properties handling
    and distributing vapi files.

  * Implemented: SWP#CntFr-39.

 -- Jean-Luc Lamadon <jean-luc.lamadon@nokia.com>  Thu, 14 May 2009 07:34:05 +0300

contextkit (0.1.6-1) unstable; urgency=low

  New upstream release.

  * contextd provides hal-based battery properties.
  * Couple of bug fixes related to properties handling.

  * Implemented: SWP#CntFr-39.

 -- Jean-Luc Lamadon <jean-luc.lamadon@nokia.com>  Wed, 13 May 2009 19:53:34 +0300

contextkit (0.1.5-1) unstable; urgency=low

  New upstream release.
  
  * Complete new libcontextprovider.
  * Documentation reorganized.
	
  * Implemented: SWP#CntFr-70, SWP#CntFr-68, SWP#CntFr-38,
    SWP#CntFr-8, SWP#CntFr-11, SWP#CntFr-36, SWP#CntFr-72,
    SWP#CntFr-96, SWP#CntFr-71, SWP#CntFr-80, SWP#CntFr-9,
    SWP#CntFr-10, SWP#CntFr-84, SWP#CntFr-74, SWP#CntFr-111,