@@ -1,8 +1,10 @@
 contextkit (0.1.9~unreleased) unstable; urgency=low
 
-  * 
+  * context-provide's registry output file is now specified by
+    CONTEXT_PROVIDE_REGISTRY_FILE and not CONTEXT_FLEXI_XML
+  *
 
- -- Gergely Risko <risko@debian.org>  Thu, 28 May 2009 14:24:14 +0300
+ -- Gergely Risko <ext-gergely.2.risko@nokia.com>  Thu, 28 May 2009 14:24:14 +0300
 
 contextkit (0.1.8) unstable; urgency=low
 
